初步实现切换起点和终点模式

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="delete">删除</string>
     <string name="startButtonText">Ride\nOn!</string>
     <string name="finishButtonText">Punch\nLine!</string>
+    <string name="workMode">运行模式：</string>
+    <string name="startMode">起点</string>
+    <string name="finishMode">起点</string>
 </resources>
