--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="output">导出</string>
     <string name="inputRidersHint">1,选手1\n2,选手2\n3,选手3\n…</string>
     <string name="copyToClipboard">复制到剪贴板</string>
+    <string name="riderId"># %1$s</string>
 </resources>
