--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="finish冒号">到达:</string>
     <string name="timeBonus括号s括号冒号">减秒(s):</string>
     <string name="note冒号">备注:</string>
+    <string name="datetimeFormatterHint">yyyy/MM/dd_HH:mm:ss.SSSS</string>
 </resources>
