--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,6 @@
     <string name="timeBonus括号s括号冒号">减秒(s):</string>
     <string name="note冒号">备注:</string>
     <string name="datetimeFormatterHint">yyyy/MM/dd_HH:mm:ss.SSSS</string>
-    <string name="calcScore">结算成绩</string>
+    <string name="calcScore">计算成绩</string>
     <string name="about">关于</string>
 </resources>
